# MoonChild-Port

./: CMakeLists.txt  LICENSE  Makefile  Makefile_n64.mk  Makefile_wii.mk  README.md
platform/n64/: n64_movie_player.cpp  n64_video.cpp
platform/sdl/: sdl_system.cpp
platform/wii/: wii_audio.cpp  wii_movie_player.cpp  wii_system.cpp  wii_video.cpp
source/: main.cpp  wii_audio.cpp  wii_audio.h  wii_game.cpp  wii_game.h  wii_movie_player.cpp  wii_movie_player.h  wii_util.cpp  wii_util.h
source/framewrk/: audio.cpp  audio.hpp  blitbuf.cpp  fastfile.cpp  frm_int.hpp  frm_wrk.hpp  movie.cpp  movie.hpp  mydefs.hpp  pcxff.cpp  sprite.cpp  sprite.hpp  video.cpp  windows.cpp
source/moonchild/: asset.cpp  asset.hpp  asteroid.cpp  asteroid.hpp  basic.cpp  basic.hpp  bat.cpp  bat.hpp  bbot.hpp  bee.hpp  bolt.cpp  bonus.cpp  bonus.hpp  bouncey.hpp  bullet.hpp  bump.cpp  bump.hpp  chain.hpp  claw.cpp  cloud.cpp  diamond.cpp  doldoler.cpp  doldoler.hpp  editor.cpp  editor.hpp  element.hpp  elevat.cpp  elevat.hpp  globals.cpp  globals.hpp  goodday.cpp  gravlift.cpp  ironauto.cpp  ironring.cpp  ironring.hpp  levinits.cpp  lift.cpp  lift.hpp  mc.cpp  metbal.cpp  (+28 more)
src/: main.cpp
src/framewrk/: audio.cpp  audio.hpp  fastfile.cpp  fastfile.h  ffent.h  frm_int.hpp  frm_wrk.hpp  movie.cpp  movie.hpp  pcx.hpp  pcxff.hpp  sprite.cpp  timer.cpp  timer.hpp  video.hpp  window.h  zconf.h
src/moonchild/: anim.cpp  anim.hpp  assem.hpp  bbot.cpp  bee.cpp  bolt.hpp  boss.cpp  boss.hpp  bouncey.cpp  bullet.cpp  cannon.cpp  cannon.hpp  chain.cpp  claw.hpp  cloud.hpp  diamond.hpp  element.cpp  glim.cpp  glim.hpp  goodday.hpp  gravlift.hpp  gumbal.cpp  gumbal.hpp  gx.h  hoi.cpp  hoi.hpp  ironauto.hpp  lvlinits.hpp  mc.cpp  mc.hpp  metbal.hpp  metcan.hpp  mine.hpp  mixer.hpp  mushroom.hpp  paal.hpp  plant.hpp  plof.hpp  prefs.cpp  prefs.hpp  (+28 more)
